libfreenect (1:0.1.2+dfsg-5) UNRELEASED; urgency=low

  * Execute dh_numpy for python-freenect to fix lintian error
  * Bump policy version to 3.9.3 

 -- Nicolas Bourdaud <nicolas.bourdaud@gmail.com>  Sat, 03 Mar 2012 18:45:37 +0100

libfreenect (1:0.1.2+dfsg-4) unstable; urgency=low

  [ Nicolas Bourdaud ]
  * Improved the package description.
  * Drop outdated libglut3-dev from Build-Depends 
  * Add libfreenect-doc to the dependencies of freenect metapackage 
  * Remove the paragraph about conflict with kernel module in README.Debian 

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 12 Feb 2012 19:00:15 -0500

libfreenect (1:0.1.2+dfsg-3) experimental; urgency=low

  [ Yaroslav Halchenko ]
  * Adding Replaces and Breaks for -bin package (Closes: #658712)
    Thanks to Andreas Beckman for the report
  * Respect 'nodoc' flag in DEB_BUILD_OPTIONS

  [ Nicolas Bourdaud ]
  * Fix execution on ARM platforms
    new patch: cameras-memcpy-structs-into-aligned-buffer.patch
  * Fix build on big endian platform
    new patch: build-on-big-endian-systems-again.patch

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 06 Feb 2012 09:47:19 -0500

libfreenect (1:0.1.2+dfsg-2) experimental; urgency=low

  [ Nicolas Bourdaud ]
  * Move doxygen from Build-Depends-Indep to Build-Depends.
  * Revert libfreenect-demos to libdevel section

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 03 Feb 2012 23:14:33 -0500

libfreenect (1:0.1.2+dfsg-1) experimental; urgency=low

  [ Nicolas Bourdaud ]
  * New upstream release (Closes: #653501)
  * Use libfreenect.0.0.udev file instead of custom install and postinst
    script to install udev rules.
  * Switch to source package format "3.0 (quilt)". Thus source code
    modifications have been converted into quilt patches:
      - New patch dont-install-into-include-subfolder.patch
      - New patch dont-postfix-to-install-libdir.patch
      - New patch modify-fakenect-install.patch